[package]
categories = ["embedded", "no-std"]
name = "esp8266-at"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]
keywords = ["no-std", "rtfm", "esp8266", "at", "wifi", "embedded", "embedded-hal-driver"]
repository = "https://github.com/jamwaffles/esp8266-at"

[dependencies]
embedded-hal = "0.1.2"
heapless = "0.2.4"

[dev-dependencies]
aligned = "0.1.1"
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
cortex-m-rtfm = "0.3.2"
cortex-m-rtfm-macros = "0.3.1"
cortex-m-semihosting = "0.2.0"
nb = "0.1.1"
panic-abort = "0.1.0"
panic-semihosting = "0.1.0"
panic-itm = "0.1.0"

[dev-dependencies.either]
version = "*"
rev = "742056c5e0fa21f4fc4083d0b9dfdb461cfe506b"
git = "https://github.com/bluss/either.git"
default-features = false

# [dependencies.embedded-hal]
# version = "0.1.2"
# features = ["unproven"]

# Must be installed from Git currently, not sure why it's not on crates.io
# TODO: Replace this with a "normal" dependency in the future
[dev-dependencies.stm32f103xx-hal]
git = "https://github.com/japaric/stm32f103xx-hal.git"
features = ["rt"]
version = "*"

# disable both incremental compilation and parallel codegen to reduce the chances of running into
# rust-lang/rust#47074
[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
